# parodic_war

./: Cargo.toml
src/: main.rs
src/model/: character.rs  chest.rs  environment.rs  equipement.rs  game.rs  helmet.rs  item.rs  legs.rs  mod.rs  shoes.rs  skills.rs  team.rs  weapon.rs  world.rs
src/procedural/: world.rs
src/raylib_wrapper/: button.rs  draw_handle.rs  mod.rs  wrapper.rs
src/screens/: character_selection.rs  game.rs  mod.rs  options.rs  skills_tree.rs
