[package]
name = "parodic_war"
version = "0.1.0"
edition = "2021"
authors = ["jackcat13 <christophehenry11@gmail.com"]
description = "Rogue like game inspired by RPG style. Made with â™¥ï¸ in ðŸ¦€"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
echodb = "0.4.0"
rayon = "1.8.0"
tokio = { version = "1.32.0", features = ["full"] }

[dependencies.raylib]
version = "4.5.0"
git = "https://github.com/litten2up/raylib-rs"
branch = "4.5.0"

[target.aarch64-apple-darwin]
rustflags = [
    "-C", "link-arg=-undefined",
    "-C", "link-arg=dynamic_lookup",
]
